[bdist_wheel]
universal = 1

[flake8]
max-line-length = 99

[tool:pytest]
xfail_strict = true
markers = 
	no_missing_modules_check: disable autouse error_on_missing_modules fixture

[mypy]
ignore_missing_imports = true

[metadata]
version = 0.22.0+lineaje.1
maintainer = Lineaje DepFixer
maintainer_email = 221268890+Lineaje-DepFixer@users.noreply.github.com
url = https://github.com/lineaje-labs-gos/nelfin-pylint-protobuf
project_urls = Homepage = https://github.com/lineaje-labs-gos/nelfin-pylint-protobuf
	Repository = https://github.com/lineaje-labs-gos/nelfin-pylint-protobuf
	Tracker = https://github.com/lineaje-labs-gos/nelfin-pylint-protobuf/issues

